# PE-Hackathon-2026

./: .env.example  Dockerfile  README.md  docker-compose.yml  nginx.conf  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  cache.py  database.py  errors.py
app/models/: __init__.py  event.py  link.py  user.py
app/routes/: __init__.py  events.py  links.py  urls.py  users.py
data/: events.csv  urls.csv  users.csv
docs/: decisions.md  reliability.md  runbook.md  scalability.md
scripts/: init_db.py  start.sh
tests/: conftest.py  test_api.py  test_errors.py  test_health.py  test_links.py  test_models.py  test_users_urls_events.py
tests/load/: k6_baseline.js  k6_gold.js  k6_silver.js
